[project]
name = "currency-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TheEmpressDiadema", email = "mauhkpaffftep@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
currency-exchange = "currency_exchange:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
